[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supportenv"
version = "1.0.0"
description = "OpenEnv customer support ticket triage benchmark"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "openai>=1.35.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "requests>=2.31.0",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["app", "data", "environment", "graders", "inference", "models"]
packages = ["server"]
